--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,5 +1,7 @@
 @import './vendor/reset';
 @import './vendor/fonts';
 
+@import './tools/mixins';
+
 @import './components/homepage';
 @import './components/homeBody';
