--- a/styles/components/_homeBody.scss
+++ b/styles/components/_homeBody.scss
@@ -4,6 +4,12 @@
 	font-family: 'Roboto', sans-serif;
 	font-weight: 400;
 	line-height: 1.6;
+
+	@include atSmall {
+		font-size: 1em;
+		margin: 3em;
+	}
+
 	& > p {
 		margin-bottom: 1em;
 	}
