--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,9 @@
 @import './vendor/reset';
 @import './vendor/fonts';
+@import './vendor/_richTextEditor';
 
 @import './tools/mixins';
 
 @import './components/homepage';
 @import './components/homeBody';
+@import './components/_newBlog';
