Add blog styles

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,4 +5,6 @@
 
 @import './components/homepage';
 @import './components/homeBody';
-@import './components/_newBlog';
+@import './components/newBlog';
+@import './components/blogsfeed';
+@import './components/blog';
