--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,3 +8,4 @@
 @import './components/newBlog';
 @import './components/blogsfeed';
 @import './components/blog';
+@import './components/blogexpanded';
