Add created timestamp

--- a/src/styles/components/_blog.scss
+++ b/src/styles/components/_blog.scss
@@ -11,10 +11,11 @@
 		font-size: 1.3em;
 		width: 60%;
 		margin: 4em auto;
+		color: darkslategray;
 
 		&__title {
 			padding-bottom: 1em;
-			border-bottom: 1px solid grey;
+			border-bottom: 1px solid #bcbdbd;
 		}
 	}
 }
