--- a/src/styles/components/_blogsfeed.scss
+++ b/src/styles/components/_blogsfeed.scss
@@ -7,7 +7,7 @@
 			font-size: 3em;
 			text-align: center;
 			font-family: 'Tangerine', cursive;
-			border-bottom: 1px solid red;
+			border-bottom: 1px solid #bcbdbd;
 			// font-weight: 300;
 		}
 	}
