--- a/src/styles/components/_newBlog.scss
+++ b/src/styles/components/_newBlog.scss
@@ -1,10 +1,12 @@
 .blog {
 	&-new {
+		&_button {
+			margin: 1em 0 !important;
+		}
 		&_title {
 			border: none;
 			outline: none;
 			width: 100%;
-			margin-top: 2em;
 			margin-bottom: 0.3em;
 			font-size: 3em;
 			font-weight: 100;
