--- a/src/styles/components/_blogexpanded.scss
+++ b/src/styles/components/_blogexpanded.scss
@@ -2,17 +2,32 @@
 	width: 40%;
 	margin: 3em auto;
 	line-height: 1.6em;
+
+	@include atSmall {
+		width: 100%;
+		margin: 1em;
+	}
 	&-blog {
 		&-head {
 			width: 75%;
 			margin: 0 auto;
 			padding-bottom: 3em;
 
+			@include atSmall {
+				width: 100%;
+			}
+
 			&_img {
 				display: block;
 				margin: 0 auto;
 				object-fit: cover;
 				margin-bottom: 2em;
+
+				@include atSmall {
+					width: 100%;
+					height: 100%;
+					padding: 1em;
+				}
 			}
 			&_title {
 				font-size: 2em;
@@ -20,6 +35,13 @@
 				font-family: 'Roboto Slab', serif;
 				line-height: 1.2;
 				text-align: center;
+			}
+		}
+
+		&_body {
+			@include atSmall {
+				width: 100%;
+				padding: 2em;
 			}
 		}
 	}
