--- a/src/styles/components/_blogsfeed.scss
+++ b/src/styles/components/_blogsfeed.scss
@@ -9,6 +9,10 @@
 			font-family: 'Tangerine', cursive;
 			border-bottom: 1px solid #bcbdbd;
 			// font-weight: 300;
+
+			@include atSmall {
+				font-size: 2em;
+			}
 		}
 	}
 }
