--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -30,7 +30,7 @@
 
 		&_nav {
 			display: grid;
-			grid-template-columns: 1fr 1fr 1fr;
+			grid-template-columns: 1fr 1fr;
 			position: absolute;
 			left: 6em;
 			top: 1.5em;
